# mulib-rust

./: Cargo.toml  README.md
src/: chord.rs  chord_find.rs  error.rs  interval.rs  lib.rs  notes.rs  pitch.rs  scale.rs
